Fix sidebar issue on mobile

--- a/src/_rtl.less
+++ b/src/_rtl.less
@@ -1,6 +1,6 @@
-﻿/*
+/*
  * # Semantic - RTL 
- * http://github.com/jlukic/semantic-ui/
+ * https://github.com/Semantic-Org/Semantic-UI-ar
  *
  *
  * Copyright 2013 Contributors
@@ -12,6 +12,10 @@
 /*******************************
   direction utility classes
 *******************************/
+/*rtl:ignore*/
+html{
+  direction:ltr;
+}
 /*rtl:ignore*/
 .rtl {
   direction:rtl;
