--- a/src/modules/sidebar.less
+++ b/src/modules/sidebar.less
@@ -15,22 +15,27 @@
 body {
   -webkit-transition:
     margin 0.3s ease,
+    padding 0.3s ease,
     -webkit-transform 0.3s ease
   ;
   -moz-transition:
     margin 0.3s ease,
+    padding 0.3s ease,
     -moz-transform 0.3s ease
   ;
   -o-transition:
     margin 0.3s ease,
+    padding 0.3s ease,
     transform 0.3s ease
   ;
   -ms-transition:
     margin 0.3s ease,
+    padding 0.3s ease,
     transform 0.3s ease
   ;
   transition:
     margin 0.3s ease,
+    padding 0.3s ease,
     transform 0.3s ease
   ;
 }
